# 1brc

./: .gitignore  .gitmodules  CMakeLists.txt  output.txt  recompile_and_run.sh  writeup.md
src/: better.cpp  better.h  main.cpp  memory_map.cpp  multithreaded.cpp  naive.cpp  naive.h  solutions.h
